--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 </head>
 <body>
-    <header>
+    <header class="Header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -20,6 +20,17 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div>
+                <h3 class="banner-gretting">Hi, I am</h3>
+                <h1 class="banner-title">Md. Shahriyar</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly
+                    he. Morning because as to society behaved moments.</p>
+                    <button class="btn-primary">Download CV</button>
+                    <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-picture" src="images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
