--- a/index.html
+++ b/index.html
@@ -91,6 +91,63 @@
             </div>
 
         </section>
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-colom">
+                    <h3 class="res-cl-title">My Education</h3>
+                    <div class="resume-item">
+                        <h3 class="res-it-title">Master in Computer Engineering</h3>
+                        <h4 class="res-it-info">Harvard University / 2015 - 2017</h4>
+                        <p class="rides">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="res-it-title">Master in Computer Engineering</h3>
+                        <h4 class="res-it-info">Harvard University / 2015 - 2017</h4>
+                        <p class="rides">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="res-it-title">Master in Computer Engineering</h3>
+                        <h4 class="res-it-info">Harvard University / 2015 - 2017</h4>
+                        <p class="rides">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div class="resume-colom">
+                    <h3 class="res-cl-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h3 class="res-it-title">Master in Computer Engineering</h3>
+                        <h4 class="res-it-info">Harvard University / 2015 - 2017</h4>
+                        <p class="rides">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="res-it-title">Master in Computer Engineering</h3>
+                        <h4 class="res-it-info">Harvard University / 2015 - 2017</h4>
+                        <p class="rides">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h3 class="res-it-title">Master in Computer Engineering</h3>
+                        <h4 class="res-it-info">Harvard University / 2015 - 2017</h4>
+                        <p class="rides">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
