--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
                     </div>
                 </div>
             </div>
+            <div class="btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
     </main>
     <footer>
